--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
 .app {
     margin: 24px 48px;
 }
+
+.header {
+    margin-left: 84px;
+    margin-bottom: 32px;
+}
+.header_text {
+    font-weight: 700;
+    font-size: 36px;
+}
+
+@media  screen and (max-width: 680px) {
+    .app {
+        margin: 12px 20px;
+    }
+
+    .header {
+        margin: 0;
+    }
+    .header_text {
+        font-size: 24px;
+    }
+}
