--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600;700&display=swap');
 
 body {
     font-family: 'Source Sans Pro';
     font-style: normal;
+    background-color: #E5E5E5;;
 }
