--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,19 @@
 }
 
 .header {
-    margin-left: 84px;
+    margin-left: 308px;
     margin-bottom: 32px;
 }
 .header_text {
     font-weight: 700;
     font-size: 36px;
+}
+
+.order-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 42px;
 }
 
 @media  screen and (max-width: 680px) {
